
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,...) ;
 int free (char*) ;
 int fwrite (char*,int,int,int *) ;
 char* stb_dupreplace (char*,char*,char*) ;
 int stb_fatal (char*,char*) ;
 char* stb_file (char*,int*) ;
 char* stb_sprintf (char*,char*) ;
 char** stb_stringfile (char*,int*) ;
 char** stb_tokens_stripwhite (char*,char*,int*) ;
 char* stb_trimwhite (char*) ;
 int strcat (char*,char*) ;
 char* strchr (char*,char) ;
 int strlen (char*) ;
 int strncpy (char*,char*,int) ;

int main(int argc, char **argv)
{
   int i;
   int hlen, flen, listlen, total_lines = 0;
   char *header = stb_file("README.header.md", &hlen);
   char *footer = stb_file("README.footer.md", &flen);
   char **list = stb_stringfile("README.list", &listlen);

   FILE *f = fopen("../README.md", "wb");

   fprintf(f, "<!---   THIS FILE IS AUTOMATICALLY GENERATED, DO NOT CHANGE IT BY HAND   --->\n\n");
   fwrite(header, 1, hlen, f);

   for (i=0; i < listlen; ++i) {
      int num,j;
      char **tokens = stb_tokens_stripwhite(list[i], "|", &num);
      int num_lines;
      char **lines = stb_stringfile(stb_sprintf("../%s", tokens[0]), &num_lines);
      char *s1, *s2,*s3;
      s1 = strchr(lines[0], '-');
      if (!s1) stb_fatal("Couldn't find '-' before version number in %s", tokens[0]);
      s2 = strchr(s1+2, '-');
      if (!s2) stb_fatal("Couldn't find '-' after version number in %s", tokens[0]);
      *s2 = 0;
      s1 += 1;
      s1 = stb_trimwhite(s1);
      if (*s1 == 'v') ++s1;
      s3 = tokens[0];
      stb_trimwhite(s3);
      fprintf(f, "**[");
      if (strlen(s3) < 21) {
         fprintf(f, "%s", tokens[0]);
      } else {
         char buffer[256];
         strncpy(buffer, s3, 18);
         buffer[18] = 0;
         strcat(buffer, "...");
         fprintf(f, "%s", buffer);
      }
      fprintf(f, "](%s)**", tokens[0]);
      fprintf(f, " | %s", s1);
      s1 = stb_trimwhite(tokens[1]);
      s2 = stb_dupreplace(s1, " ", "&nbsp;");
      fprintf(f, " | %s", s2);
      free(s2);
      fprintf(f, " | %d", num_lines);
      total_lines += num_lines;
      for (j=2; j < num; ++j)
         fprintf(f, " | %s", tokens[j]);
      fprintf(f, "\n");
   }

   fprintf(f, "\n");
   fprintf(f, "Total libraries: %d  \n", listlen);
   fprintf(f, "Total lines of C code: %d\n\n", total_lines);

   fwrite(footer, 1, flen, f);
   fclose(f);

   return 0;
}
